Fixes table issues on mobile again.

--- a/bulma.scss
+++ b/bulma.scss
@@ -42,7 +42,7 @@ table {
 .page {
   .views-table {
     @include touch {
-      font-size: 0.75em;
+      font-size: 0.66em;
     }
   }
 }
